sumo/tests/sumo/extended/calibrator/errors/vClass_mismatch_ignore/tripinfos.sumo
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on Thu May 11 13:26:38 2017 by SUMO Version dev-SVN-r24253
<?xml version="1.0" encoding="UTF-8"?>

<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <additional-files value="input_additional.add.xml"/>
    </input>

    <output>
        <tripinfo-output value="tripinfos.xml"/>
    </output>

    <report>
        <xml-validation value="never"/>
        <no-step-log value="true"/>
    </report>

</configuration>
-->

<tripinfos xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/tripinfo_file.xsd">
</tripinfos>
